# rusty-trading

./: .gitignore  Cargo.toml
exchange/: Cargo.toml  build.rs
exchange-api-frontend/: Cargo.toml
exchange/proto/: exchange.proto
exchange/src/: db.rs  limit_order_book.rs  main.rs
sample-bot/: Cargo.toml
sample-bot/src/: main.rs
