[package]
name = "exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost = "0.11"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11"
tokio = "*"

[build-dependencies]
tonic-build = "0.8.3"
