[package]
name = "exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.9", features = ["codegen"] }
prost = "0.11"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11"
tokio = { version = "*", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"] }

anyhow = "*"

[build-dependencies]
tonic-build = "0.9"
